tests/compile_failures/swapped_splitbits.rs
use splitbits::*;

fn main() {
    splitbits!("aaabbccc", 0b11011101);
}
